<resources>
    <string name="app_name">FreeloaderUser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_user_home">Home</string>
    <string name="nav_change_location">Change Location</string>
    <string name="nav_serviceinfo">Service Information</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_terms_and_condition">Terms And Conditions</string>
    <string name="logout">Logout</string>
    <string name="nav_about_us">About Us</string>

    <string name="driver_busy">All driver are busy yor ride is not accepted</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Change Location</item>
        <item>Service Information</item>
        <item>My Account</item>
        <item>Terms And Conditions</item>
        <item>Logout</item>
    </string-array>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="google_maps_api_key">AIzaSyB9xBjd5tjPz5C9E4zzo4gMvuIQvoP0RRc</string>

    <string name="facebook_app_id">2191908507724144</string>
    <string name="fb_login_protocol_scheme">fb2191908507724144</string>
    <string name="title_activity_maps">Map</string>

</resources>
